Add SchemaAwareRead example for the schema-aware facade read
A fifth runnable example demonstrating the headline capability of the reader-
facade arc: tson.treeReader() over a configured schemaSource reads a self-
describing document (its own !!schema) and validates automatically, falls back
to a schemaless read when none is declared, and rejects an out-of-range value
fail-fast. Notes tson.objectReader().read(doc, Class) as the object-binding twin.

Wired into examples/README.md (run block + table) and the main README (a new
"5. Read a self-describing document" section, four->five example count).
ExamplesTest runs it as a subprocess and passes.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>